--- a/2. web-api/6. quiz/quiz01(answer).html
+++ b/2. web-api/6. quiz/quiz01(answer).html
@@ -20,6 +20,18 @@
     <input type="checkbox" value="3"> 조항3
     <input type="checkbox" value="4"> 조항4
 
+    <script>
+        const $check = document.querySelectorAll('input[type="checkbox"]');
+        // console.log($check);
+        for (let $c of [...$check]) {
+            $c.addEventListener('change', e => {
+                if (e.target.checked) {
+                    alert(`${e.target.value}번 항목에 동의하셨습니다.`);
+                }
+            })
+        }
+    </script>
+
     <br>
 
     <!--
@@ -31,31 +43,22 @@
     <button id="check2">확인</button>
 
     <script>
-        // 1.
-        const $inputList = [...document.querySelectorAll('input[value]')];
-
-        for (let $li of $inputList) {
-            $li.addEventListener('change', e => {
-                if (e.target.checked) alert(`${e.target.value}번 조항에 동의하셨습니다.`);
-            });
-        };
-
-
-        // 2.
-        const $id = document.getElementById('id');
+        const $result = document.getElementById('id');
         const $remember = document.getElementById('remember');
-        const $btn = document.querySelector('button');
 
-        $btn.addEventListener('click', () => {
-            if ($id.value === '') {
-                alert('아이디를 입력해주세요.');
+        document.getElementById('check2').onclick = function (e) {
+            console.log('value값: ' + $result.value);
+            console.log('check값: ' + $remember.checked);
+
+            if ($result.value === '') {
+                alert('아이디는 필수값입니다!');
             } else if (!$remember.checked) {
-                alert('기억하기를 눌러주세요.');
-            } else {
-                alert('회원가입이 완료되셨습니다.\n많은 이용 부탁드립니다. :)');
+                alert('기억하기를 체크하지 않았습니다.');
             }
-        });
+        }
     </script>
+
+
 </body>
 
 </html>
