--- a/2. web-api/6. quiz/quiz09(answer).html
+++ b/2. web-api/6. quiz/quiz09(answer).html
@@ -53,23 +53,6 @@
             box-sizing: border-box;
             resize: none;
         }
-
-        .dark {
-            color: white;
-            background-color: black;
-        }
-
-        a {
-            color: black;
-        }
-
-        a.dark {
-            color: white;
-        }
-
-        .inner a.name {
-            display: none;
-        }
     </style>
 </head>
 
@@ -107,51 +90,52 @@
             클래스 이름을 dark, light 등으로 추가해서 구분을 했습니다.
             참고로 글씨 색깔을 바꿔줘야 하는 태그는 p, h2, a 입니다.
         */
-        const $btn1 = document.querySelector('#btn1');
-        const $body = document.querySelector('body');
-        const $a = document.querySelector('a');
 
-        $btn1.addEventListener('click', e => {
-            $btn1.classList.toggle('dark-mode');
-            if ($btn1.classList.contains('dark-mode')) {
+        const $btn1 = document.getElementById('btn1');
+        const $tags = document.querySelectorAll('p, h2, a');
+
+        $btn1.onclick = () => {
+            $btn1.classList.toggle('dark');
+
+            if ($btn1.classList.contains('dark')) {
+                // 어둡게 보기 모드
+                document.body.style.backgroundColor = 'black';
+                [...$tags].forEach($ele => $ele.style.color = 'white');
                 $btn1.textContent = '밝게 보기';
             } else {
+                // 밝게 보기 모드
+                document.body.style.backgroundColor = 'white';
+                [...$tags].forEach($ele => $ele.style.color = 'black');
                 $btn1.textContent = '어둡게 보기';
             }
-
-            $body.classList.toggle('dark');
-            $a.classList.toggle('dark');
-        });
-
+        };
 
         /*
             클래스 이름을 통해서 이름 보기 모드인지를 확인.
             안에 있는 내용들은 innerHTML로 삽입.
             버튼도 '이름 보기', '내용 보기'로 지정.
+            p태그 안의 내용만 바꿔 주시면 됩니다.
 
             이름 보기 모드 내용 : 홍길동<br>20세<br>능력단위<br>Java, Oracle, Jsp, CSS, JavaScript
         */
-        const $btn2 = document.querySelector('#btn2');
-        const $inner = document.querySelector('.right .inner');
-        const $p = document.querySelector('.right .inner p');
-        const $naver = document.querySelector('.right .inner a');
 
-        $btn2.addEventListener('click', e => {
-            $btn2.classList.toggle('name');
-            $p.classList.toggle('name');
-            $naver.classList.toggle('name');
-            $inner.classList.toggle('name');
+        const $btn2 = document.getElementById('btn2');
+        const $content = document.querySelector('.right .inner > p');
+        const $a = document.querySelector('.right .inner > a');
 
-            if ($btn2.classList.contains('name')) {
-                $btn2.textContent = '이름 보기';
-                $p.textContent = '자바스크립트는 객체 기반의 스크립트 프로그래밍 언어이다. 이 언어는 웹 브라우저 내에서 주로 사용하며, 다른 응용 프로그램의 내장 객체에도 접근할 수 있는 기능을 가지고 있다. 또한 Node.js와 같은 런타임 환경과 같이 서버 사이드 네트워크 프로그래밍에도 사용되고 있다.';
-            } else {
+        $btn2.onclick = () => {
+            if ($btn2.className === 'name') {
+                $content.innerHTML = '홍길동<br>20세<br>능력단위<br>Java, Oracle, Jsp, CSS, JavaScript';
+                $a.style.display = 'none';
                 $btn2.textContent = '내용 보기';
-                $p.textContent = '';
-                $p.insertAdjacentHTML('afterBegin', '홍길동<br>20세<br>능력단위<br>Java, Oracle, Jsp, CSS, JavaScript');
+                $btn2.className = 'conView';
+            } else {
+                $content.innerHTML = '자바스크립트는 객체 기반의 스크립트 프로그래밍 언어이다. 이 언어는 웹 브라우저 내에서 주로 사용하며, 다른 응용 프로그램의 내장 객체에도 접근할 수 있는 기능을 가지고 있다. 또한 Node.js와 같은 런타임 환경과 같이 서버 사이드 네트워크 프로그래밍에도 사용되고 있다.';
+                $a.style.display = 'block';
+                $btn2.textContent = '이름 보기';
+                $btn2.className = 'name';
             }
-        });
-
+        };
 
         /*
             메모장 보기 모드는 textarea를 생성해서 추가.
@@ -160,37 +144,37 @@
             .left 안에 있는 .inner의 모든 자식 노드를 제거하고
             생성하신 요소를 추가해 주시면 되겠습니다.
         */
-        const $btn3 = document.querySelector('#btn3');
-        const $leftInner = document.querySelector('.left .inner');
-        const textarea = document.createElement('textarea');
-        textarea.classList.add('memo');
-        const $btn = document.createElement('button');
-        $btn.textContent = '등록하기';
-        const img = document.createElement('img');
-        img.src = './img/1.jpg';
-        img.alt = 'pic';
 
-        $btn3.addEventListener('click', e => {
-            $btn3.classList.toggle('mode');
-            if (!$btn3.classList.contains('mode')) {
-                $btn3.textContent = '메모장 모드';
+        const $btn3 = document.getElementById('btn3');
 
-                textarea.remove();
-                $btn.remove();
-                $leftInner.appendChild(img);
+        $btn3.onclick = () => {
+            const $inner = document.querySelector('.left > .inner');
 
-            } else {
-                $btn3.textContent = '사진 모드';
-                $leftInner.removeChild($leftInner.firstElementChild);
-
-                img.remove();
-                $leftInner.appendChild(textarea);
-                $leftInner.appendChild($btn);
+            for (let $ele of [...$inner.children]) {
+                $inner.removeChild($ele);
             }
 
+            $btn3.classList.toggle('write');
 
+            if ($btn3.className === 'write') {
+                const $textarea = document.createElement('textarea');
+                $textarea.className = 'memo';
+                const $regBtn = document.createElement('button');
+                $regBtn.textContent = '등록하기';
+                const $frag = document.createDocumentFragment();
+                $frag.appendChild($textarea);
+                $frag.appendChild($regBtn);
+                $inner.appendChild($frag);
 
-        });
+                $btn3.textContent = '사진 모드';
+            } else {
+                const $img = document.createElement('img');
+                $img.setAttribute('src', './img/1.jpg');
+                $inner.appendChild($img);
+
+                $btn3.textContent = '메모장 모드';
+            }
+        };
     </script>
 </body>
 
